ListingImageGallery: thumbnail stripe was not overflowing correctly on mobile screens

--- a/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
+++ b/src/containers/ListingPage/ListingImageGallery/ListingImageGallery.module.css
@@ -13,6 +13,11 @@
 :global(.image-gallery-thumbnails) {
   padding-top: 24px;
   padding-bottom: 0;
+  width: 100vw;
+
+  @media (--viewportLarge) {
+    width: unset;
+  }
 }
 :global(.image-gallery-thumbnail) {
   width: auto;
